--- a/tajmahal/tajmahal.html
+++ b/tajmahal/tajmahal.html
@@ -60,13 +60,14 @@ li a:hover {
 <body>
 <a href="tajmahal.html" title="Taj Mahal Home">
 <img src="logo.jpeg" alt="Taj Mahal Logo" style="float:left;width:100px;height:100px"></a>
-<h1>Taj Mahal</h1>
+<h1 style="font-family:Arial;font-size:300%;text-align:center;">Taj Mahal</h1>
 <hr width="100%">
 <ul>
   <li><a href="monuments.html" target="_blank">Home</a></li>
   <li><a href="https://www.tajmahal.gov.in/" target="_blank">Official Site</a></li>
   <li><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>
   <li><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">Wikipedia</a></li>
+  <li><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">More Details..</a></li>
   <li><a href="https://www.google.com/maps/place/Taj+Mahal/@27.1751448,78.0399535,17z/data=!4m12!1
 m6!3m5!1s0x39747121d702ff6d:0xdd2ae4803f767dde!2sTaj+Mahal!8m2!3d27.1751448!4d78.042142
 2!3m4!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2!3d27.1751448!4d78.0421422" target="_blank">Maps</a></li>
@@ -79,7 +80,30 @@ al!8m2!3d27.1751448!4d78.0421422!3m6!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2
 <li align="Right"><a href=".html" target="_blank">Rohit Kumar</a></li>
 </ul>
 <br>
-<img src="image.jpg" alt="Taj Mahal" style="float:center;width:100%;height:100%;">
+<p><img src="photo.jpg" alt="Taj Mahal" style="width:250px;height:250px;margin-left:15px;margin-right:15px;margin-bottom:15px;float:right;"></p>
+<p style="width:900px;float:left;font-family:Arial;"><b>Taj Mahal-The Glory of India</b><br><br>The Taj Mahal of Agra is one of the 
+Seven Wonders of the World, for reasons more than just looking magnificent. It's the history of Taj Mahal that adds a soul to its 
+magnificence: a soul that is filled with love, loss, remorse, and love again. Because if it was not for love, the world would have 
+been robbed of a fine example upon which people base their relationships. An example of how deeply a man loved his wife, that even 
+after she remained but a memory, he made sure that this memory would never fade away. This man was the Mughal Emperor Shah Jahan, 
+who was head-over-heels in love with Mumtaz Mahal, his dear wife. She was a Muslim Persian princess (her name Arjumand Banu Begum before marriage)
+ and he was the son of the Mughal Emperor Jehangir and grandson of Akbar the Great. It was at the age of 14 that he met Mumtaz and fell in love with her.
+Five years later in the year 1612, they got married.<br>
+
+Mumtaz Mahal, an inseparable companion of Shah Jahan, died in 1631, while giving birth to their 14th child. 
+It was in the memory of his beloved wife that Shah Jahan built a magnificent monument as a tribute to her, 
+which we today know as the "Taj Mahal". The construction of Taj Mahal started in the year 1631. 
+Masons, stonecutters, inlayers, carvers, painters, calligraphers, dome-builders and other artisans were requisitioned from the whole
+ of the empire and also from Central Asia and Iran, and it took approximately 22 years to build what we see today. An epitome of love, 
+it made use of the services of 22,000 laborers and 1,000 elephants. The monument was built entirely out of white marble, which was brought in from all over India and central Asia.
+ After an expenditure of approximately 32 million rupees, Taj Mahal was finally completed in the year 1653.
+<br>
+It was soon after the completion of Taj Mahal that Shah Jahan was deposed by his own son Aurangzeb and was put under house arrest at nearby Agra Fort. Shah Jahan, himself also, 
+lies entombed in this mausoleum along with his wife. Moving further down the history, it was at the end of the 19th century that British Viceroy Lord Curzon ordered a sweeping restoration project, 
+which was completed in 1908, as a measure to restore what was lost during the Indian rebellion of 1857: Taj being blemished by British soldiers and government officials who also deprived the monument
+ of its immaculate beauty by chiseling out precious stones and lapis lazuli from its walls. Also, the British style lawns that we see today adding on to the beauty of Taj were remodeled around the same time.
+ Despite prevailing controversies, past and present threats from Indo-Pak war and environmental pollution, this epitome of love continuous to shine and attract people from all over the world.</p>
+<hr width="25%"><img src="image1.jpg" alt="Taj Mahal" style="float:center;width:100%;height:100%;">
 </body>
 </html>
 
