--- a/tajmahal/tajmahal.html
+++ b/tajmahal/tajmahal.html
@@ -58,9 +58,10 @@ li a:hover {
 <title>Taj Mahal-The Glory of the Nation</title>
 </head>
 <body>
+<header style="position:fixed;width:100%;height:200px;top:10;background-image:url('header.jpg);">
 <a href="tajmahal.html" title="Taj Mahal Home">
 <img src="logo.jpeg" alt="Taj Mahal Logo" style="float:left;width:100px;height:100px"></a>
-<h1 style="font-family:Arial;font-size:300%;text-align:center;">Taj Mahal</h1>
+<h1 style="font-family:Arial;font-size:300%;text-align:center">Taj Mahal</h1>
 <hr width="100%">
 <ul>
   <li><a href="monuments.html" target="_blank">Home</a></li>
@@ -79,6 +80,7 @@ al!8m2!3d27.1751448!4d78.0421422!3m6!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2
 2!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
 <li align="Right"><a href=".html" target="_blank">Rohit Kumar</a></li>
 </ul>
+</header>
 <br>
 <p><img src="photo.jpg" alt="Taj Mahal" style="width:250px;height:250px;margin-left:15px;margin-right:15px;margin-bottom:15px;float:right;"></p>
 <p style="width:900px;float:left;font-family:Arial;"><b>Taj Mahal-The Glory of India</b><br><br>The Taj Mahal of Agra is one of the 
@@ -103,7 +105,7 @@ lies entombed in this mausoleum along with his wife. Moving further down the his
 which was completed in 1908, as a measure to restore what was lost during the Indian rebellion of 1857: Taj being blemished by British soldiers and government officials who also deprived the monument
  of its immaculate beauty by chiseling out precious stones and lapis lazuli from its walls. Also, the British style lawns that we see today adding on to the beauty of Taj were remodeled around the same time.
  Despite prevailing controversies, past and present threats from Indo-Pak war and environmental pollution, this epitome of love continuous to shine and attract people from all over the world.</p>
-<hr width="25%"><img src="image1.jpg" alt="Taj Mahal" style="float:center;width:100%;height:100%;">
+<img src="image1.jpg" alt="Taj Mahal" style="float:center;width:100%;height:100%;">
 </body>
 </html>
 
