--- a/tajmahal/tajmahal.html
+++ b/tajmahal/tajmahal.html
@@ -58,10 +58,11 @@ li a:hover {
 <title>Taj Mahal-The Glory of the Nation</title>
 </head>
 <body>
-<header style="position:fixed;width:100%;height:200px;top:10;background-image:url('header.jpg);">
+<header style="position:fixed;width:100%;height:200px">
 <a href="tajmahal.html" title="Taj Mahal Home">
 <img src="logo.jpeg" alt="Taj Mahal Logo" style="float:left;width:100px;height:100px"></a>
 <h1 style="font-family:Arial;font-size:300%;text-align:center">Taj Mahal</h1>
+</p>
 <hr width="100%">
 <ul>
   <li><a href="monuments.html" target="_blank">Home</a></li>
@@ -82,8 +83,8 @@ al!8m2!3d27.1751448!4d78.0421422!3m6!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2
 </ul>
 </header>
 <br>
-<p><img src="photo.jpg" alt="Taj Mahal" style="width:250px;height:250px;margin-left:15px;margin-right:15px;margin-bottom:15px;float:right;"></p>
-<p style="width:900px;float:left;font-family:Arial;"><b>Taj Mahal-The Glory of India</b><br><br>The Taj Mahal of Agra is one of the 
+<p style="margin-top:150px;"><img src="photo.jpg" alt="Taj Mahal" style="width:250px;height:250px;margin-left:15px;margin-top:15px;margin-right:15px;margin-bottom:15px;float:right;"></p>
+<p align="justify" style="width:900px;float:left;font-family:Arial;"><b>Taj Mahal-The Glory of India</b><br><br>The Taj Mahal of Agra is one of the 
 Seven Wonders of the World, for reasons more than just looking magnificent. It's the history of Taj Mahal that adds a soul to its 
 magnificence: a soul that is filled with love, loss, remorse, and love again. Because if it was not for love, the world would have 
 been robbed of a fine example upon which people base their relationships. An example of how deeply a man loved his wife, that even 
