--- a/tajmahal/tajmahal.html
+++ b/tajmahal/tajmahal.html
@@ -58,7 +58,7 @@ li a:hover {
 <title>Taj Mahal-The Glory of the Nation</title>
 </head>
 <body>
-<header style="position:fixed;width:100%;height:200px">
+<header style="position:fixed;width:100%;height:200px;background-color:white;repeat">
 <a href="tajmahal.html" title="Taj Mahal Home">
 <img src="logo.jpeg" alt="Taj Mahal Logo" style="float:left;width:100px;height:100px"></a>
 <h1 style="font-family:Arial;font-size:300%;text-align:center">Taj Mahal</h1>
