--- a/tajmahal/tajmahal.html
+++ b/tajmahal/tajmahal.html
@@ -58,9 +58,9 @@ li a:hover {
 <title>Taj Mahal-The Glory of the Nation</title>
 </head>
 <body>
-<header style="position:fixed;width:100%;height:200px;background-color:white;repeat">
+<header style="position:fixed;width:100%;height:180px;background-color:white;">
 <a href="tajmahal.html" title="Taj Mahal Home">
-<img src="logo.jpeg" alt="Taj Mahal Logo" style="float:left;width:100px;height:100px"></a>
+<img src="logo.jpeg" alt="Taj Mahal Logo" style="float:left;width:120px;height:120px;border-radius:100%;"></a>
 <h1 style="font-family:Arial;font-size:300%;text-align:center">Taj Mahal</h1>
 </p>
 <hr width="100%">
@@ -106,6 +106,7 @@ lies entombed in this mausoleum along with his wife. Moving further down the his
 which was completed in 1908, as a measure to restore what was lost during the Indian rebellion of 1857: Taj being blemished by British soldiers and government officials who also deprived the monument
  of its immaculate beauty by chiseling out precious stones and lapis lazuli from its walls. Also, the British style lawns that we see today adding on to the beauty of Taj were remodeled around the same time.
  Despite prevailing controversies, past and present threats from Indo-Pak war and environmental pollution, this epitome of love continuous to shine and attract people from all over the world.</p>
+<div style="text-align:center;"><iframe align="center" width="900px" height="550px" src="https://www.youtube.com/embed/44rTTLjZZz4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 <img src="image1.jpg" alt="Taj Mahal" style="float:center;width:100%;height:100%;">
 </body>
 </html>
