--- a/tajmahal/tajmahal.html
+++ b/tajmahal/tajmahal.html
@@ -58,13 +58,13 @@ li a:hover {
 <title>Taj Mahal-The Glory of the Nation</title>
 </head>
 <body>
-<header style="position:fixed;width:100%;height:180px;background-color:white;">
+<header style="width:100%;height:180px;background-color:white;">
 <a href="tajmahal.html" title="Taj Mahal Home">
 <img src="logo.jpeg" alt="Taj Mahal Logo" style="float:left;width:120px;height:120px;border-radius:100%;"></a>
 <h1 style="font-family:Arial;font-size:300%;text-align:center">Taj Mahal</h1>
 </p>
 <hr width="100%">
-<ul>
+<ul style="position:fixed;">
   <li><a href="monuments.html" target="_blank">Home</a></li>
   <li><a href="https://www.tajmahal.gov.in/" target="_blank">Official Site</a></li>
   <li><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>
