--- a/tajmahal/tajmahal.html
+++ b/tajmahal/tajmahal.html
@@ -64,7 +64,7 @@ li a:hover {
 <h1 style="font-family:Arial;font-size:300%;text-align:center">Taj Mahal</h1>
 </p>
 <hr width="100%">
-<ul style="position:fixed;">
+<ul style="position:fixed;float:top;">
   <li><a href="monuments.html" target="_blank">Home</a></li>
   <li><a href="https://www.tajmahal.gov.in/" target="_blank">Official Site</a></li>
   <li><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>
