--- a/tajmahal/tajmahal.html
+++ b/tajmahal/tajmahal.html
@@ -2,46 +2,48 @@
 <!doctype html>
 <html lang="en">
 <head>
+<meta charset="utf-8">
 <style>
 body {
   background-image: url("background.jpg");
   background-repeat: repeat-x;
   background-position: right top;
   background-attachment: fixed;
+  margin-top: 0px;
+  margin-bottom: 0x;
+  margin-right: 0px;
+  margin-left: 0px;
 }
 a:link {
   background-color: transparent;
   text-decoration: none;
 }
-
 a:visited {
   background-color: transparent;
   text-decoration: none;
 }
-
 a:hover {
   color: black;
   background-color: transparent;
   text-decoration: none;
 }
-
 a:active {
-
   background-color: transparent;
   text-decoration: none;
 }
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+  list-style-type: none;;
   overflow: hidden;
-  background-color: #333;
+  
 }
-
+div.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
 li {
   float: left;
 }
-
 li a {
   display: block;
   color: white;
@@ -53,23 +55,96 @@ li a {
 li a:hover {
   background-color: white;
 }
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+hr.new1 {
+  border-top: 1px solid white;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: black; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+
 </style>
-<meta charset="utf-8">
 <title>Taj Mahal-The Glory of the Nation</title>
 </head>
 <body>
-
 <a href="tajmahal.html" title="Taj Mahal Home">
-<img src="logo.jpeg" alt="Taj Mahal Logo" style="float:left;width:120px;height:120px;border-radius:100%;"></a>
+<img src="logo.jpeg" style="float:left;width:100px;height:100px;"></a>
 <h1 style="font-family:Arial;font-size:300%;text-align:center">Taj Mahal</h1>
-</p>
 <hr width="100%">
-<ul style="position:fixed;float:top;">
+<div class="sticky">
+<ul style="float:top;width:100%;padding:0px;margin-right:0px;margin-left:0px;background-color: #333;">
   <li><a href="monuments.html" target="_blank">Home</a></li>
   <li><a href="https://www.tajmahal.gov.in/" target="_blank">Official Site</a></li>
   <li><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>
   <li><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">Wikipedia</a></li>
-  <li><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">More Details..</a></li>
+  <li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Taj_Mahal" target="_blank">Details Download</a></li>
   <li><a href="https://www.google.com/maps/place/Taj+Mahal/@27.1751448,78.0399535,17z/data=!4m12!1
 m6!3m5!1s0x39747121d702ff6d:0xdd2ae4803f767dde!2sTaj+Mahal!8m2!3d27.1751448!4d78.042142
 2!3m4!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2!3d27.1751448!4d78.0421422" target="_blank">Maps</a></li>
@@ -80,11 +155,78 @@ googleusercontent.com%2Fp%2FAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5%3Dw224-
 al!8m2!3d27.1751448!4d78.0421422!3m6!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2!3d27.1751448!4d78.042142
 2!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
 <li align="Right"><a href=".html" target="_blank">Rohit Kumar</a></li>
-</ul>
+</ul></div>
+<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<script>
+//Get the button
+var mybutton = document.getElementById("myBtn");
 
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+</script>
+<div class="slideshow-container">
+
+	<div class="mySlides fade">
+	  <div class="numbertext">1 / 3</div>
+ 	 <img src="image1.jpg" style="width:100%">
+	</div>
+
+	<div class="mySlides fade">
+	  <div class="numbertext">2 / 3</div>
+	  <img src="image2.jpg" style="width:100%">
+	</div>
+	
+	<div class="mySlides fade">
+	  <div class="numbertext">3 / 3</div>
+	  <img src="image3.jpg" style="width:100%">
+	</div>
+</div>
 <br>
-<p style="margin-top:150px;"><img src="photo.jpg" alt="Taj Mahal" style="width:250px;height:250px;margin-left:15px;margin-top:15px;margin-right:15px;margin-bottom:15px;float:right;"></p>
-<p align="justify" style="width:900px;float:left;font-family:Arial;"><b>Taj Mahal-The Glory of India</b><br><br>The Taj Mahal of Agra is one of the 
+
+<div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+</div>
+
+<script>
+var slideIndex = 0;
+showSlides();
+
+function showSlides() {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}    
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+  setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+</script>
+<hr width="100%">
+<p><img src="photo.jpg" alt="Taj Mahal" style="width:250px;height:250px;margin-left:10px;margin-top:10px;margin-right:10px;margin-bottom:10px;float:right;"></p>
+<p align="justify" style="width:900px;float:left;font-family:Arial;margin-left: 10px;"><b>Taj Mahal-The Glory of India</b><br>The Taj Mahal of Agra is one of the 
 Seven Wonders of the World, for reasons more than just looking magnificent. It's the history of Taj Mahal that adds a soul to its 
 magnificence: a soul that is filled with love, loss, remorse, and love again. Because if it was not for love, the world would have 
 been robbed of a fine example upon which people base their relationships. An example of how deeply a man loved his wife, that even 
@@ -99,15 +241,15 @@ which we today know as the "Taj Mahal". The construction of Taj Mahal started in
 Masons, stonecutters, inlayers, carvers, painters, calligraphers, dome-builders and other artisans were requisitioned from the whole
  of the empire and also from Central Asia and Iran, and it took approximately 22 years to build what we see today. An epitome of love, 
 it made use of the services of 22,000 laborers and 1,000 elephants. The monument was built entirely out of white marble, which was brought in from all over India and central Asia.
- After an expenditure of approximately 32 million rupees, Taj Mahal was finally completed in the year 1653.
-<br>
-It was soon after the completion of Taj Mahal that Shah Jahan was deposed by his own son Aurangzeb and was put under house arrest at nearby Agra Fort. Shah Jahan, himself also, 
-lies entombed in this mausoleum along with his wife. Moving further down the history, it was at the end of the 19th century that British Viceroy Lord Curzon ordered a sweeping restoration project, 
-which was completed in 1908, as a measure to restore what was lost during the Indian rebellion of 1857: Taj being blemished by British soldiers and government officials who also deprived the monument
- of its immaculate beauty by chiseling out precious stones and lapis lazuli from its walls. Also, the British style lawns that we see today adding on to the beauty of Taj were remodeled around the same time.
- Despite prevailing controversies, past and present threats from Indo-Pak war and environmental pollution, this epitome of love continuous to shine and attract people from all over the world.</p>
-<div style="text-align:center;"><iframe align="center" width="900px" height="550px" src="https://www.youtube.com/embed/44rTTLjZZz4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-<img src="image1.jpg" alt="Taj Mahal" style="float:center;width:100%;height:100%;">
+ After an expenditure of approximately 32 million rupees, Taj Mahal was finally completed in the year 1653.</p>
+<hr width="100%">
+<ul style="float:top;padding:0px;margin-right:0px;margin-left:0px;background-color: none;">
+<li><div style="text-align:center;float:left;margin-top: 10px;margin-bottom: 30x;margin-left: 85px;margin-right: 30px;"><iframe align="center" width="320" height="240" src="https://www.youtube.com/embed/44rTTLjZZz4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+<li><div style="text-align:center;float:center;margin-top: 10px;margin-bottom: 30x;margin-left: 30px;margin-right: 30px;"><iframe src="https://drive.google.com/file/d/1NWmyIvhOxmFH-UIrNlrR93cDxhDSlKkK/preview" width="320" height="240"></iframe></div></li>
+<li><div style="text-align:center;float:right;margin-top: 10px;margin-bottom: 30x;margin-left: 30px;margin-right: 30px;"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1805124.7370024894!2d76.49555521016833!3d27.913195114688442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
+1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1591280248639!5m2!1sen!2sin" width="320" height="240" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li></ul>
+<hr width="100%">
+
 </body>
 </html>
 
