--- a/tajmahal/tajmahal.html
+++ b/tajmahal/tajmahal.html
@@ -244,10 +244,10 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
  After an expenditure of approximately 32 million rupees, Taj Mahal was finally completed in the year 1653.</p>
 <hr width="100%">
 <ul style="float:top;padding:0px;margin-right:0px;margin-left:0px;background-color: none;">
-<li><div style="text-align:center;float:left;margin-top: 10px;margin-bottom: 30x;margin-left: 85px;margin-right: 30px;"><iframe align="center" width="320" height="240" src="https://www.youtube.com/embed/44rTTLjZZz4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
-<li><div style="text-align:center;float:center;margin-top: 10px;margin-bottom: 30x;margin-left: 30px;margin-right: 30px;"><iframe src="https://drive.google.com/file/d/1NWmyIvhOxmFH-UIrNlrR93cDxhDSlKkK/preview" width="320" height="240"></iframe></div></li>
+<li><div style="text-align:center;float:left;margin-top: 10px;margin-bottom: 30x;margin-left: 85px;margin-right: 30px;"><iframe align="center" width="90%" height="240" src="https://www.youtube.com/embed/44rTTLjZZz4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+<li><div style="text-align:center;float:center;margin-top: 10px;margin-bottom: 30x;margin-left: 30px;margin-right: 30px;"><iframe src="https://drive.google.com/file/d/1NWmyIvhOxmFH-UIrNlrR93cDxhDSlKkK/preview" width="90%" height="240"></iframe></div></li>
 <li><div style="text-align:center;float:right;margin-top: 10px;margin-bottom: 30x;margin-left: 30px;margin-right: 30px;"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1805124.7370024894!2d76.49555521016833!3d27.913195114688442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
-1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1591280248639!5m2!1sen!2sin" width="320" height="240" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li></ul>
+1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1591280248639!5m2!1sen!2sin" width="90%" height="240" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li></ul>
 <hr width="100%">
 
 </body>
