--- a/tajmahal/tajmahal.html
+++ b/tajmahal/tajmahal.html
@@ -14,6 +14,53 @@ body {
   margin-right: 0px;
   margin-left: 0px;
 }
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-right {
+    float: none;
+  }
+}
 a:link {
   background-color: transparent;
   text-decoration: none;
@@ -111,7 +158,8 @@ hr.new1 {
   animation-duration: 1.5s;
 }
 #myBtn {
-  display: none; /* Hidden by default */
+  display: none; /*km]
+   ]\-1en by default */
   position: fixed; /* Fixed/sticky position */
   bottom: 20px; /* Place the button at the bottom of the page */
   right: 30px; /* Place the button 30px from the right */
@@ -129,14 +177,72 @@ hr.new1 {
 #myBtn:hover {
   background-color: #555;
 }
+/* Style inputs */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* Style the container/contact section */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 5px;
+}
+
+/* Create two columns that float next to eachother */
+.column {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
 
 </style>
 <title>Taj Mahal-The Glory of the Nation</title>
 </head>
 <body>
+<div class="header">
 <a href="tajmahal.html" title="Taj Mahal Home">
 <img src="logo.jpeg" style="float:left;width:100px;height:100px;"></a>
-<h1 style="font-family:Arial;font-size:300%;text-align:center">Taj Mahal</h1>
+  <a href="tajmahal.html" class="logo">Taj Mahal</a>
+  <div class="header-right">
+    <a class="active" href="tajmahal.html">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+</div>
 <hr width="100%">
 <div class="sticky">
 <ul style="float:top;width:100%;padding:0px;margin-right:0px;margin-left:0px;background-color: #333;">
@@ -145,9 +251,7 @@ hr.new1 {
   <li><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>
   <li><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">Wikipedia</a></li>
   <li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Taj_Mahal" target="_blank">Details Download</a></li>
-  <li><a href="https://www.google.com/maps/place/Taj+Mahal/@27.1751448,78.0399535,17z/data=!4m12!1
-m6!3m5!1s0x39747121d702ff6d:0xdd2ae4803f767dde!2sTaj+Mahal!8m2!3d27.1751448!4d78.042142
-2!3m4!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2!3d27.1751448!4d78.0421422" target="_blank">Maps</a></li>
+  <li><a href="https://www.tajmahal.gov.in/images/map/front.jpg" target="_blank">Guide Maps</a></li>
   <li><a href="https://www.google.com/maps/place/Taj+Mahal/@27.1750082,78.0431095,3a,75y,64.05h,105.
 76t/data=!3m8!1e1!3m6!1sAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5!2e10!3e11!6shttps:%2F%2Flh5.
 googleusercontent.com%2Fp%2FAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5%3Dw224-h298-k-no-pi-15.7556
@@ -249,6 +353,31 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
 <li><div style="text-align:center;float:right;margin-top: 10px;margin-bottom: 30x;margin-left: 10%;margin-right: 10%px;"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1805124.7370024894!2d76.49555521016833!3d27.913195114688442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
 1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1591280248639!5m2!1sen!2sin" width="90%" height="240" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li></ul>
 <hr width="100%">
+<div class="container">
+  <div style="text-align:center">
+    <h2>Contact Us</h2>
+  </div>
+  <div class="row">
+    <div class="column">
+      <img src="photo.jpg" style="width:30%;height:30%;float:right">
+    </div>
+    <div class="column">
+      <form action="/action_page.php">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        <label for="country">Country</label>
+        <select id="country" name="country">
+          <option value="australia">India</option>
+        </select>
+        <label for="subject">Subject</label>
+        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
