--- a/tajmahal.html
+++ b/tajmahal.html
@@ -235,7 +235,7 @@ input[type=submit]:hover {
 <body>
 <div class="header">
 <a href="tajmahal.html" title="Taj Mahal Home">
-<img src="logo.jpeg" style="float:left;width:100px;height:100px;"></a>
+<img src="1.tajmahal/logo.jpeg" style="float:left;width:100px;height:100px;"></a>
   <a href="tajmahal.html" class="logo">Taj Mahal</a>
   <div class="header-right">
     <a class="active" href="tajmahal.html">Home</a>
@@ -286,12 +286,12 @@ function topFunction() {
 
 	<div class="mySlides fade">
 	  <div class="numbertext">1 / 3</div>
- 	 <img src="image1.jpg" style="width:100%">
+ 	 <img src="1.tajmahal/image1.jpg" style="width:100%">
 	</div>
 
 	<div class="mySlides fade">
 	  <div class="numbertext">2 / 3</div>
-	  <img src="image2.jpg" style="width:100%">
+	  <img src="1.tajmahal/image2.jpg" style="width:100%">
 	</div>
 	
 	<div class="mySlides fade">
@@ -329,7 +329,7 @@ function showSlides() {
 }
 </script>
 <hr width="100%">
-<p><img src="photo.jpg" alt="Taj Mahal" style="width:250px;height:250px;margin-left:10px;margin-top:10px;margin-right:10px;margin-bottom:10px;float:right;"></p>
+<p><img src="1.tajmahal/photo.jpg" alt="Taj Mahal" style="width:250px;height:250px;margin-left:10px;margin-top:10px;margin-right:10px;margin-bottom:10px;float:right;"></p>
 <p align="justify" style="width:900px;float:left;font-family:Arial;margin-left: 10px;"><b>Taj Mahal-The Glory of India</b><br>The Taj Mahal of Agra is one of the 
 Seven Wonders of the World, for reasons more than just looking magnificent. It's the history of Taj Mahal that adds a soul to its 
 magnificence: a soul that is filled with love, loss, remorse, and love again. Because if it was not for love, the world would have 
@@ -353,32 +353,6 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
 <li><div style="text-align:center;float:right;margin-top: 10px;margin-bottom: 30x;margin-left: 10%;margin-right: 10%px;"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1805124.7370024894!2d76.49555521016833!3d27.913195114688442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
 1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1591280248639!5m2!1sen!2sin" width="90%" height="240" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li></ul>
 <hr width="100%">
-<div class="container">
-  <div style="text-align:center">
-    <h2>Contact Us</h2>
-  </div>
-  <div class="row">
-    <div class="column">
-      <img src="photo.jpg" style="width:30%;height:30%;float:right">
-    </div>
-    <div class="column">
-      <form action="/action_page.php">
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-        <label for="country">Country</label>
-        <select id="country" name="country">
-          <option value="australia">India</option>
-        </select>
-        <label for="subject">Subject</label>
-        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-        <input type="submit" value="Submit">
-      </form>
-    </div>
-  </div>
-</div>
-
 </body>
 </html>
 
