--- a/tajmahal.html
+++ b/tajmahal.html
@@ -234,9 +234,7 @@ input[type=submit]:hover {
 </head>
 <body>
 <div class="header">
-<a href="tajmahal.html" title="Taj Mahal Home">
-<img src="1.tajmahal/logo.jpeg" style="float:left;width:100px;height:100px;"></a>
-  <a href="tajmahal.html" class="logo">Taj Mahal</a>
+  <a href="tajmahal.html" class="logo"><div style="size:4em;">Taj Mahal</a>
   <div class="header-right">
     <a class="active" href="tajmahal.html">Home</a>
     <a href="#contact">Contact</a>
