--- a/tajmahal.html
+++ b/tajmahal.html
@@ -11,7 +11,10 @@
 </head>
 <body>
 <p class="header" id="head">
-  <div class="header-name" id="head-name">Taj Mahal</div>
+
+<a href="index.html" class="pull-left visible-md visible-lg">
+<div class="header-img" id="head-img"></div></a>
+<div class="header-name" id="head-name">Taj Mahal</div>
 </p>
 <hr width="100%">
 </body>
