--- a/tajmahal.html
+++ b/tajmahal.html
@@ -10,12 +10,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="header">
+<a href="#default" class="logo"><img src="logo.png">
+ </a>
 <p class="header" id="head">
-
-<a href="index.html" class="pull-left visible-md visible-lg">
-<div class="header-img" id="head-img"></div></a>
 <div class="header-name" id="head-name">Taj Mahal</div>
 </p>
+ <div class="header-right">
+    <a class="active" href="#home">Home<br></a>
+    <a class="active" href="#contact">Contact</a>
+    <a class="active" href="#about">About</a>
+ </div>
+</div>
 <hr width="100%">
 </body>
 </html>
