--- a/tajmahal.html
+++ b/tajmahal.html
@@ -99,7 +99,7 @@ function showSlides() {
   setTimeout(showSlides, 2000); // Change image every 2 seconds
 }
 </script>
-<p class="body-text"><div class="body-main">Taj Mahal-The Glory of India</div><br>The Taj Mahal of Agra is one of the 
+<p class="body-text"><div class="body-title">Taj Mahal-The Glory of India</div><br>The Taj Mahal of Agra is one of the 
 Seven Wonders of the World, for reasons more than just looking magnificent. It's the history of Taj Mahal that adds a soul to its 
 magnificence: a soul that is filled with love, loss, remorse, and love again. Because if it was not for love, the world would have 
 been robbed of a fine example upon which people base their relationships. An example of how deeply a man loved his wife, that even 
