--- a/tajmahal.html
+++ b/tajmahal.html
@@ -115,11 +115,11 @@ Masons, stonecutters, inlayers, carvers, painters, calligraphers, dome-builders 
 it made use of the services of 22,000 laborers and 1,000 elephants. The monument was built entirely out of white marble, which was brought in from all over India and central Asia.
  After an expenditure of approximately 32 million rupees, Taj Mahal was finally completed in the year 1653.</div>
 <hr width="100%">
-<ul class="reference">
-<li><div class="youtube"><iframe align="center" width="90%" height="240" src="https://www.youtube.com/embed/44rTTLjZZz4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
-<li><div class="pdf"><iframe src="https://drive.google.com/file/d/1NWmyIvhOxmFH-UIrNlrR93cDxhDSlKkK/preview" width="90%" height="240"></iframe></div></li>
+<ul class="reference container-fluid">
+<li><div class="youtube"><iframe align="center"  src="https://www.youtube.com/embed/44rTTLjZZz4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+<li><div class="pdf"><iframe src="https://drive.google.com/file/d/1NWmyIvhOxmFH-UIrNlrR93cDxhDSlKkK/preview"></iframe></div></li>
 <li><div class="maps"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1805124.7370024894!2d76.49555521016833!3d27.913195114688442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
-1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1591280248639!5m2!1sen!2sin" width="90%" height="240" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li></ul>
+1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1591280248639!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li></ul>
 <hr width="100%">
 </body>
 </html>
