--- a/tajmahal.html
+++ b/tajmahal.html
@@ -117,5 +117,6 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
 <li><div class="pdf col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://drive.google.com/file/d/1NWmyIvhOxmFH-UIrNlrR93cDxhDSlKkK/preview"></iframe></div></li>
 <li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1805124.7370024894!2d76.49555521016833!3d27.913195114688442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1591280248639!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li></ul>
 <hr width="100%">
+<p class="footer" id="foot"></p>
 </body>
 </html>
