--- a/tajmahal.html
+++ b/tajmahal.html
@@ -117,6 +117,37 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
 <li><div class="pdf col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://drive.google.com/file/d/1NWmyIvhOxmFH-UIrNlrR93cDxhDSlKkK/preview"></iframe></div></li>
 <li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1805124.7370024894!2d76.49555521016833!3d27.913195114688442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1591280248639!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li></ul>
 <hr width="100%">
-<p class="footer" id="foot"></p>
+<footer class="panel-footer ">
+    <div class="container">
+      <div class="row">
+        <section id="hours" class="col-sm-4">
+          <span><a href="monuments.html">Home Page</a></span><br>
+          <a href="tajmahal.html">1.Taj Mahal</a><br>
+          <a href="redfort.html">2.Red Fort</a><br>
+         <a href="lotustemple.html">3.Lotus Temple</a><br>
+         <a href="qutubminar.html">4.Qutub Minar</a><br>
+         <a href="victoriamemorial.html">5.Victoria Memorial</a><br>
+         <a href="gatewayofindia.html">6.Gateway of India</a><br>
+         <a href="charminar.html">7.Charminar</a><br>
+         <a href="hawamahal.html">8.Hawa Mahal</a><br>
+         <a href="mysorepalace.html">9.Mysore Palace</a><br>
+         <a href="cst.html">10.CST</a><br>
+          <hr class="visible-xs">
+        </section>
+        <section id="address" class="col-sm-4">
+          <span>Address:</span><br>
+          7105 Reisterstown Road<br>
+          Baltimore, MD 21215
+          <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+          <hr class="visible-xs">
+        </section>
+        <section id="testimonials" class="col-sm-4">
+          <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
+          <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+        </section>
+      </div>
+      <div class="text-center">&copy; Copyright Rohit Kumar 2020</div>
+    </div>
+  </footer>
 </body>
 </html>
