--- a/tajmahal.html
+++ b/tajmahal.html
@@ -119,8 +119,8 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
 <hr width="100%">
 <footer class="panel-footer ">
     <div class="container">
-      <div class="row">
-        <section id="hours" class="col-sm-4">
+      <div class="row footer-text">
+        <section id="monuments-list" class="col-sm-4">
           <span><a href="monuments.html">Home Page</a></span><br>
           <a href="tajmahal.html">1.Taj Mahal</a><br>
           <a href="redfort.html">2.Red Fort</a><br>
@@ -134,11 +134,14 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
          <a href="cst.html">10.CST</a><br>
           <hr class="visible-xs">
         </section>
-        <section id="address" class="col-sm-4">
-          <span>Address:</span><br>
-          7105 Reisterstown Road<br>
-          Baltimore, MD 21215
-          <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+        <section id="important-sites" class="col-sm-4">
+          <span>Important Sites</span><br>
+          <a href="https://www.india.gov.in/">1.Government of India<br>
+          <a href="http://tourism.gov.in/">2.Ministry of Tourism<br>
+          <a href="https://www.google.com/maps">3.Google Maps<br>
+          <a href="https://www.wikipedia.org/">4.Wikipedia<br>
+          <a href="https://en.unesco.org/">5.UNESCO<br>
+          <a href="#projrctreport">6.Project Report<br>
           <hr class="visible-xs">
         </section>
         <section id="testimonials" class="col-sm-4">
