--- a/tajmahal.html
+++ b/tajmahal.html
@@ -121,27 +121,27 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
     <div class="container">
       <div class="row footer-text">
         <section id="monuments-list" class="col-sm-4">
-          <span><a href="monuments.html">Home Page</a></span><br>
-          <a href="tajmahal.html">1.Taj Mahal</a><br>
-          <a href="redfort.html">2.Red Fort</a><br>
-         <a href="lotustemple.html">3.Lotus Temple</a><br>
-         <a href="qutubminar.html">4.Qutub Minar</a><br>
-         <a href="victoriamemorial.html">5.Victoria Memorial</a><br>
-         <a href="gatewayofindia.html">6.Gateway of India</a><br>
-         <a href="charminar.html">7.Charminar</a><br>
-         <a href="hawamahal.html">8.Hawa Mahal</a><br>
-         <a href="mysorepalace.html">9.Mysore Palace</a><br>
-         <a href="cst.html">10.CST</a><br>
+          <span><a href="monuments.html" target="_blank">Home Page</a></span><br>
+          <a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
+          <a href="redfort.html" target="_blank">2.Red Fort</a><br>
+         <a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
+         <a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
+         <a href="victoriamemorial.html" target="_blank">5.Victoria Memorial</a><br>
+         <a href="gatewayofindia.html" target="_blank">6.Gateway of India</a><br>
+         <a href="charminar.html" target="_blank">7.Charminar</a><br>
+         <a href="hawamahal.html" target="_blank">8.Hawa Mahal</a><br>
+         <a href="mysorepalace.html" target="_blank">9.Mysore Palace</a><br>
+         <a href="cst.html" target="_blank">10.CST</a><br>
           <hr class="visible-xs">
         </section>
         <section id="important-sites" class="col-sm-4">
           <span>Important Sites</span><br>
-          <a href="https://www.india.gov.in/">1.Government of India<br>
-          <a href="http://tourism.gov.in/">2.Ministry of Tourism<br>
-          <a href="https://www.google.com/maps">3.Google Maps<br>
-          <a href="https://www.wikipedia.org/">4.Wikipedia<br>
-          <a href="https://en.unesco.org/">5.UNESCO<br>
-          <a href="#projrctreport">6.Project Report<br>
+          <a href="https://www.india.gov.in/" target="_blank">1.Government of India<br>
+          <a href="http://tourism.gov.in/" target="_blank">2.Ministry of Tourism<br>
+          <a href="https://www.google.com/maps" target="_blank">3.Google Maps<br>
+          <a href="https://www.wikipedia.org/" target="_blank">4.Wikipedia<br>
+          <a href="https://en.unesco.org/" target="_blank">5.UNESCO<br>
+          <a href="#projrctreport" target="_blank">6.Project Report<br>
           <hr class="visible-xs">
         </section>
         <section id="testimonials" class="col-sm-4">
