--- a/tajmahal.html
+++ b/tajmahal.html
@@ -144,7 +144,7 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
           <a href="#projrctreport" target="_blank">6.Project Report<br>
           <hr class="visible-xs">
         </section>
-        <section id="testimonials" class="col-sm-4">
+        <section id="aboutus" class="col-sm-4">
           <p>Contact Us<br>Rohit Kumar<br>ABESEC<br>9084950475<br>rohit.19b101051@abes.ac.in<br></p>
         </section>
       </div>
