--- a/tajmahal.html
+++ b/tajmahal.html
@@ -6,6 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Taj Mahal</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="css/styles.css">
 <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
@@ -144,8 +146,8 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
           <a href="#projrctreport" target="_blank">6.Project Report<br>
           <hr class="visible-xs">
         </section>
-        <section id="aboutus" class="col-sm-4">
-          <p>Contact Us<br>Rohit Kumar<br>ABESEC<br>9084950475<br>rohit.19b101051@abes.ac.in<br></p>
+        <section id="about" class="col-sm-4">
+          <p>Contact Us<br>Rohit Kumar<br>ABESEC<br><a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp&nbsp9084950475</a><br><a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp&nbsprohit.19b101051@abes.ac.in</a></p>
         </section>
       </div>
       <div class="text-center">&copy; Copyright Rohit Kumar 2020</div>
