--- a/tajmahal.html
+++ b/tajmahal.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Taj Mahal</title>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -25,7 +26,7 @@
 </p></div>
 <div class="sticky">
 <ul class="links">
-  <li><a href="monuments.html" target="_blank">Home</a></li>
+  <li class="w3-large"><a href="monuments.html" target="_blank"><i class="fa fa-home"></i></a></li>
   <li><a href="https://www.tajmahal.gov.in/" target="_blank">Official Site</a></li>
   <li><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>
   <li><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">Wikipedia</a></li>
@@ -148,7 +149,7 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
           <hr class="visible-xs">
         </section>
         <section id="about" class="col-sm-4">
-          <p>Contact Us:<br>Rohit Kumar<br>ABESEC<br><a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp&nbsp9084950475</a><br><a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp&nbsprohit.19b101051@abes.ac.in</a><br>Follows me:<br>
+          <p>Contact Us:<br>Rohit Kumar<br>ABESEC<br><a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp&nbsp9084950475</a><br><a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp&nbsprohit.19b101051@abes.ac.in</a><br>&nbsp<br>Follows me:<br>
         <a href="https://www.facebook.com/profile.php?id=100040466752176" target="_blank" class="fa fa-facebook"></a>
 		<a href="https://twitter.com/rk2962002" target="_blank" class="fa fa-twitter"></a>
 		<a href="https://www.linkedin.com/in/rohit-kumar-28494415a/" target="_blank" class="fa fa-linkedin"></a>
@@ -156,7 +157,7 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
 		</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright Rohit Kumar 2020</div>
+      <div class="text-center">&copy; Copyright Rohit Kumar<br>This Site is Developed and Hosted by Rohit Kumar</div>
     </div>
   </footer>
 </body>
