--- a/tajmahal.html
+++ b/tajmahal.html
@@ -5,7 +5,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Taj Mahal</title>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -26,7 +25,7 @@
 </p></div>
 <div class="sticky">
 <ul class="links">
-  <li class="w3-large"><a href="monuments.html" target="_blank"><i class="fa fa-home"></i></a></li>
+  <li><a href="monuments.html" target="_blank">Home</a></li>
   <li><a href="https://www.tajmahal.gov.in/" target="_blank">Official Site</a></li>
   <li><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>
   <li><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">Wikipedia</a></li>
@@ -157,7 +156,7 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
 		</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright Rohit Kumar<br>This Site is Developed and Hosted by Rohit Kumar</div>
+      <div class="text-center">&copy; Copyright Rohit Kumar<br>This Site is Developed and Hosted by Rohit</div>
     </div>
   </footer>
 </body>
