--- a/tajmahal.html
+++ b/tajmahal.html
@@ -156,7 +156,7 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
 		</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright Rohit Kumar<br>This Site is Developed and Hosted by Rohit</div>
+      <div class="text-center">&copy; Copyright Rohit Kumar<br>This Site is Developed and Hosted by Rohit Kumar</div>
     </div>
   </footer>
 </body>
