--- a/tajmahal.html
+++ b/tajmahal.html
@@ -145,6 +145,7 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
           <a href="https://www.wikipedia.org/" target="_blank">4.Wikipedia<br>
           <a href="https://en.unesco.org/" target="_blank">5.UNESCO<br>
           <a href="#projrctreport" target="_blank">6.Project Report<br>
+          <a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=grmaoxpa&nd=7&style=121" border="0" alt="free counter"></a>
           <hr class="visible-xs">
         </section>
         <section id="about" class="col-sm-4">
@@ -157,7 +158,6 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
         </section>
       </div>
       <div class="text-center">&copy; Copyright Rohit Kumar<br>This Site is Developed and Hosted by Rohit Kumar</div>
-	  <div class="visitor-count"><a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=grmaoxpa&nd=7&style=121" border="0" alt="free counter"></a></div>
     </div>
   </footer>
 </body>
