--- a/tajmahal.html
+++ b/tajmahal.html
@@ -148,7 +148,7 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
           <hr class="visible-xs">
         </section>
         <section id="about" class="col-sm-4">
-          <p>Contact Us:<br><a href="https://rk2962002.github.io/my-site/index.html" target="_blank">Rohit Kumar</a><br><a href="https://www.abes.ac.in/" target="_blank">ABES Engineering College</a><br><a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp&nbsp9084950475</a><br><a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp&nbsprohit.19b101051@abes.ac.in</a><br>&nbsp<br>Follows me:<br>
+          <p>Contact Us:<br><a href="https://rk2962002.github.io/my-site/index.html" target="_blank">Rohit Kumar</a><br><a href="https://www.abes.ac.in/" target="_blank">ABES Engineering College</a><br><a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp&nbsp9084950475</a><br><a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp&nbsprohit.19b101051@abes.ac.in</a><br>&nbsp<br>Follows Us:<br>
         <a href="https://www.facebook.com/profile.php?id=100040466752176" target="_blank" class="fa fa-facebook"></a>
 		<a href="https://twitter.com/rk2962002" target="_blank" class="fa fa-twitter"></a>
 		<a href="https://www.linkedin.com/in/rohit-kumar-28494415a/" target="_blank" class="fa fa-linkedin"></a>
