--- a/tajmahal.html
+++ b/tajmahal.html
@@ -18,7 +18,7 @@
 <p class="header" id="head">
 <div class="header-name" id="head-name">Taj Mahal
 <div class="header-button">
-    <a class="active" href="#home">Home</a>
+    <a class="active" href="monuments.html">Home</a>
     <a class="active" href="#contact">Contact</a>
     <a class="active" href="#about">About</a>
  </div></div>
