--- a/tajmahal.html
+++ b/tajmahal.html
@@ -35,7 +35,7 @@
   </div>
   <div id="collapsable-nav" class="collapse navbar-collapse">
     <ul id="nav-list" class="nav navbar-nav navbar-right">
-      <li class="text-bar"><a href="monuments.html" target="_blank">Home<br class="hidden-xs"></a></li>
+      <li class="text-bar"><a href="monuments.html" target="_blank">Home</a></li>
       <li class="text-bar"><a href="https://www.tajmahal.gov.in/" target="_blank">Official Site<br></a></li>
       <li class="text-bar"><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>`
       <li class="text-bar"><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">Wikipedia</a></li>
@@ -48,8 +48,8 @@
       al!8m2!3d27.1751448!4d78.0421422!3m6!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2!3d27.1751448!4d78.042142
       2!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
     </ul>
-  </div><!-- .collapse .navbar-collapse -->
-  </div><!-- .container -->
+  </div>
+  </div>
 </nav>
 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 <script>
@@ -161,7 +161,7 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
           <hr class="visible-xs">
         </section>
         <section id="about" class="col-sm-4">
-          <p>Contact Us:<br><a href="https://rk2962002.github.io/my-site/index.html" target="_blank">Rohit Kumar</a><br><a href="https://www.abes.ac.in/" target="_blank">ABES Engineering College</a><br><a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp&nbsp9084950475</a><br><a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp&nbsprohit.19b101051@abes.ac.in</a><br>&nbsp<br>Follows Us:<br>
+          <p>Contact Us:<br><a href="https://rk2962002.github.io/my-site/index.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,UP</a><br><a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp&nbsp9084950475</a><br><a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp&nbsprohit.19b101051@abes.ac.in</a><br>&nbsp<br>Follows Us:<br>
         <a href="https://www.facebook.com/profile.php?id=100040466752176" target="_blank" class="fa fa-facebook"></a>
 		<a href="https://twitter.com/rk2962002" target="_blank" class="fa fa-twitter"></a>
 		<a href="https://www.linkedin.com/in/rohit-kumar-28494415a/" target="_blank" class="fa fa-linkedin"></a>
@@ -169,12 +169,9 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
 		</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright Rohit Kumar<br>
+      <div class="text-center">|&copy;Copyright Rohit Kumar|Monuments of India|2020|<br>
       	<marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee></div>
     </div>
   </footer>
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
 </body>
 </html>
