--- a/tajmahal.html
+++ b/tajmahal.html
@@ -23,34 +23,21 @@
     <a class="active" href="#about">About</a>
  </div></div>
 </p></div>
-
- <nav id="header-nav" class="navbar navbar-default">
-  <div class="container">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-  </div>
-  <div id="collapsable-nav" class="collapse navbar-collapse">
-    <ul id="nav-list" class="nav navbar-nav navbar-right">
-      <li class="text-bar"><a href="monuments.html" target="_blank">Home</a></li>
-      <li class="text-bar"><a href="https://www.tajmahal.gov.in/" target="_blank">Official Site<br></a></li>
-      <li class="text-bar"><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>`
-      <li class="text-bar"><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">Wikipedia</a></li>
-      <li class="text-bar"><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Taj_Mahal" target="_blank">Details Download</a></li>
-      <li class="text-bar"><a href="https://www.tajmahal.gov.in/images/map/front.jpg" target="_blank">Guide Maps</a></li>
-      <li class="text-bar"><a href="https://www.google.com/maps/place/Taj+Mahal/@27.1750082,78.0431095,3a,75y,64.05h,105.
-      76t/data=!3m8!1e1!3m6!1sAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5!2e10!3e11!6shttps:%2F%2Flh5.
-      googleusercontent.com%2Fp%2FAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5%3Dw224-h298-k-no-pi-15.7556
-      26-ya62.76752-ro-0-fo100!7i7776!8i3888!4m14!1m6!3m5!1s0x39747121d702ff6d:0xdd2ae4803f767dde!2sTaj+Mah
-      al!8m2!3d27.1751448!4d78.0421422!3m6!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2!3d27.1751448!4d78.042142
-      2!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
-    </ul>
-  </div>
-  </div>
-</nav>
+<div class="sticky">
+<ul class="links">
+  <li><a href="monuments.html" target="_blank">Home</a></li>
+  <li><a href="https://www.tajmahal.gov.in/" target="_blank">Official Site</a></li>
+  <li><a href="https://www.tajmahal.gov.in/taj-mahal-photo-gallery.aspx" target="_blank">Gallery</a></li>
+  <li><a href="https://en.wikipedia.org/wiki/Taj_Mahal" target="_blank">Wikipedia</a></li>
+  <li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Taj_Mahal" target="_blank">Details Download</a></li>
+  <li><a href="https://www.tajmahal.gov.in/images/map/front.jpg" target="_blank">Guide Maps</a></li>
+  <li><a href="https://www.google.com/maps/place/Taj+Mahal/@27.1750082,78.0431095,3a,75y,64.05h,105.
+76t/data=!3m8!1e1!3m6!1sAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5!2e10!3e11!6shttps:%2F%2Flh5.
+googleusercontent.com%2Fp%2FAF1QipMu_ZghP7g4QL7ACT2gXPTEwqbA4CjPpMN96RD5%3Dw224-h298-k-no-pi-15.7556
+26-ya62.76752-ro-0-fo100!7i7776!8i3888!4m14!1m6!3m5!1s0x39747121d702ff6d:0xdd2ae4803f767dde!2sTaj+Mah
+al!8m2!3d27.1751448!4d78.0421422!3m6!1s0x39747121d702ff6d:0xdd2ae4803f767dde!8m2!3d27.1751448!4d78.042142
+2!14m1!1BCgIgARICCAI" target="_blank">360 Tour</a></li>
+</ul></div>
 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 <script>
 var mybutton = document.getElementById("myBtn");
@@ -112,7 +99,7 @@ function showSlides() {
   setTimeout(showSlides, 2000); // Change image every 2 seconds
 }
 </script>
-<div id="body-text"><div class="body-title">Taj Mahal</div><br>The Taj Mahal of Agra is one of the 
+<div id="body-text"><div class="body-title">Taj Mahal-The Glory of India</div><br>The Taj Mahal of Agra is one of the 
 Seven Wonders of the World, for reasons more than just looking magnificent. It's the history of Taj Mahal that adds a soul to its 
 magnificence: a soul that is filled with love, loss, remorse, and love again. Because if it was not for love, the world would have 
 been robbed of a fine example upon which people base their relationships. An example of how deeply a man loved his wife, that even 
@@ -161,7 +148,7 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
           <hr class="visible-xs">
         </section>
         <section id="about" class="col-sm-4">
-          <p>Contact Us:<br><a href="https://rk2962002.github.io/my-site/index.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,UP</a><br><a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp&nbsp9084950475</a><br><a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp&nbsprohit.19b101051@abes.ac.in</a><br>&nbsp<br>Follows Us:<br>
+          <p>Contact Us:<br><a href="https://rk2962002.github.io/my-site/index.html" target="_blank">Rohit Kumar</a><br><a href="https://ghaziabad.nic.in/en/" target="_blank">Ghaziabad,U.P</a><br><a href="tel:9084950475"><span class="glyphicon glyphicon-earphone"></span>&nbsp&nbsp9084950475</a><br><a href = "mailto: rohit.19b101051@abes.ac.in"><span class="glyphicon glyphicon-envelope"></span>&nbsp&nbsprohit.19b101051@abes.ac.in</a><br>&nbsp<br>Follows Us:<br>
         <a href="https://www.facebook.com/profile.php?id=100040466752176" target="_blank" class="fa fa-facebook"></a>
 		<a href="https://twitter.com/rk2962002" target="_blank" class="fa fa-twitter"></a>
 		<a href="https://www.linkedin.com/in/rohit-kumar-28494415a/" target="_blank" class="fa fa-linkedin"></a>
@@ -169,8 +156,7 @@ it made use of the services of 22,000 laborers and 1,000 elephants. The monument
 		</p>
         </section>
       </div>
-      <div class="text-center">|&copy;Copyright Rohit Kumar|Monuments of India|2020|<br>
-      	<marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee></div>
+      <div class="text-center">&copy; Copyright Rohit Kumar|Monuments of India|2020<br><marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee></div>
     </div>
   </footer>
 </body>
